@@ -465,7 +465,7 @@
     <variable name="Label_HomeWidget_Label">
         <value condition="Container(9001).IsUpdating">$LOCALIZE[31090]...</value>
         <value condition="[StringCompare(Container(9000).ListItem.Property(widget),Weather) | [IsEmpty(Container(9000).ListItem.Property(widget)) + StringCompare(Skin.String(home.fallbackwidget),Weather)]] + !IsEmpty(Skin.String(weather.fanart.path))">$INFO[Weather.Temperature,,  ]$INFO[Weather.Conditions]</value>
-        <value>$INFO[Container(9001).ListItem.Label]</value>
+        <value>$INFO[Container(9001).ListItem.Property(NextNumber),,. ]$INFO[Container(9001).ListItem.Label]</value>
     </variable>
     <variable name="Label_HomeWidget_Plot">
 <!-- Modification Value -->    
